api-fiscalizacion-prod/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T19:29:28Z"
    labels:
      app: cache-service
      application: cache-service
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      template: cache-service
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: cache-service
    namespace: api-fiscalizacion-prod
    resourceVersion: "94873037"
    uid: 09eff256-8ce7-4bb1-8407-c7474f19e376
  spec:
    host: cache-service-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: https
    tls:
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAJLy5hrt7Truc+XSi/n97mcwDQYJKoZIhvcNAQELBQAw
[...]
        655JZ9QJJBjMJu/Yh4OJCXWhUGERGto=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAmDtA8UoGIfUp1zqz1tyTawc8+2BMCXG8E+7qe6R5KsGdb6Yu
[...]
        bWgrxYHvPhobw41zEhGif6YXMgUvkqVH7YXaoh9CEMzNz/3OEAOEug==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: cache-service
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T19:29:28Z"
        status: "True"
        type: Admitted
      host: cache-service-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: cron003-enviospendientes
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: cron003-enviospendientes
    namespace: api-fiscalizacion-prod
    resourceVersion: "22620428"
    uid: c9e17684-2d71-42ed-a60e-1859e866e1f0
  spec:
    host: cron003-enviospendientes-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: cron003-enviospendientes
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:49:59Z"
        status: "True"
        type: Admitted
      host: cron003-enviospendientes-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0001-validacionesfondoextra
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0001-validacionesfondoextra
    namespace: api-fiscalizacion-prod
    resourceVersion: "22620295"
    uid: fc9524ec-9918-461b-91f9-aa5e34be0554
  spec:
    host: csr0001-validacionesfondoextra-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondoextra
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:49:43Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondoextra-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0001-validacionesfondolarge
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0001-validacionesfondolarge
    namespace: api-fiscalizacion-prod
    resourceVersion: "22620154"
    uid: fd187855-01ee-49d7-b76f-3f559125bcff
  spec:
    host: csr0001-validacionesfondolarge-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondolarge
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:49:26Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondolarge-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0001-validacionesfondomedium
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0001-validacionesfondomedium
    namespace: api-fiscalizacion-prod
    resourceVersion: "22618114"
    uid: cf537fe5-4a6a-4b55-994b-ee1fd5b34d6d
  spec:
    host: csr0001-validacionesfondomedium-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondomedium
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:45:54Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondomedium-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0001-validacionesfondosmall
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0001-validacionesfondosmall
    namespace: api-fiscalizacion-prod
    resourceVersion: "22617993"
    uid: 3e1fb367-5d29-442d-9020-ff6dcc46b69c
  spec:
    host: csr0001-validacionesfondosmall-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondosmall
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:45:39Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondosmall-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0001-validacionesfondosmalltmp
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0001-validacionesfondosmalltmp
    namespace: api-fiscalizacion-prod
    resourceVersion: "22617842"
    uid: 02586b63-6c0b-4472-b407-086d7e5d3956
  spec:
    host: csr0001-validacionesfondosmalltmp-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0001-validacionesfondosmalltmp
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:45:20Z"
        status: "True"
        type: Admitted
      host: csr0001-validacionesfondosmalltmp-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0002-cargaarchivoextra
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0002-cargaarchivoextra
    namespace: api-fiscalizacion-prod
    resourceVersion: "22617645"
    uid: a1ddcfd0-c369-4936-97aa-c06d46d2fe44
  spec:
    host: csr0002-cargaarchivoextra-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0002-cargaarchivoextra
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:45:04Z"
        status: "True"
        type: Admitted
      host: csr0002-cargaarchivoextra-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0002-cargaarchivolarge
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0002-cargaarchivolarge
    namespace: api-fiscalizacion-prod
    resourceVersion: "22617342"
    uid: 768099cd-53ae-4b43-a2d2-fec439579495
  spec:
    host: csr0002-cargaarchivolarge-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0002-cargaarchivolarge
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:44:43Z"
        status: "True"
        type: Admitted
      host: csr0002-cargaarchivolarge-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0002-cargaarchivomedium
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0002-cargaarchivomedium
    namespace: api-fiscalizacion-prod
    resourceVersion: "22617190"
    uid: 2529dc1b-0a07-4c03-9ba3-64e56308b0b9
  spec:
    host: csr0002-cargaarchivomedium-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0002-cargaarchivomedium
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:44:26Z"
        status: "True"
        type: Admitted
      host: csr0002-cargaarchivomedium-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0002-cargaarchivosmall
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0002-cargaarchivosmall
    namespace: api-fiscalizacion-prod
    resourceVersion: "22617058"
    uid: 7f01141f-d44d-4a38-8d93-c4be7603bf1e
  spec:
    host: csr0002-cargaarchivosmall-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0002-cargaarchivosmall
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:44:10Z"
        status: "True"
        type: Admitted
      host: csr0002-cargaarchivosmall-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0002-cargaarchivosmalltmp
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0002-cargaarchivosmalltmp
    namespace: api-fiscalizacion-prod
    resourceVersion: "22616772"
    uid: 2e7a955c-7053-435d-bdda-a41d2b4a9122
  spec:
    host: csr0002-cargaarchivosmalltmp-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0002-cargaarchivosmalltmp
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:43:52Z"
        status: "True"
        type: Admitted
      host: csr0002-cargaarchivosmalltmp-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0005-managerdec-big
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0005-managerdec-big
    namespace: api-fiscalizacion-prod
    resourceVersion: "22616559"
    uid: 18f53f11-9977-4c5f-bc4e-36e7a0f839c5
  spec:
    host: csr0005-managerdec-big-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0005-managerdec-big
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:43:35Z"
        status: "True"
        type: Admitted
      host: csr0005-managerdec-big-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: csr0006-excepciones
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: csr0006-excepciones
    namespace: api-fiscalizacion-prod
    resourceVersion: "22616403"
    uid: 532e935e-ff18-43a4-9e03-f1afea3ea1a5
  spec:
    host: csr0006-excepciones-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: csr0006-excepciones
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:43:17Z"
        status: "True"
        type: Admitted
      host: csr0006-excepciones-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: prox0001-registralibrore
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: prox0001-registralibrore
    namespace: api-fiscalizacion-prod
    resourceVersion: "22616257"
    uid: eb6e32de-4dd4-4d3c-a094-e86a963a0eab
  spec:
    host: prox0001-registralibrore-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prox0001-registralibrore
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:43:01Z"
        status: "True"
        type: Admitted
      host: prox0001-registralibrore-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: prox0001-registralibrott
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: prox0001-registralibrott
    namespace: api-fiscalizacion-prod
    resourceVersion: "22616106"
    uid: c11cffe7-459d-488b-807c-4be5f89e0c4f
  spec:
    host: prox0001-registralibrott-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8778-tcp
    to:
      kind: Service
      name: prox0001-registralibrott
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:42:44Z"
        status: "True"
        type: Admitted
      host: prox0001-registralibrott-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: prx0002-validareglaslre
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: prx0002-validareglaslre
    namespace: api-fiscalizacion-prod
    resourceVersion: "22615957"
    uid: 42cda810-8ecd-4b1f-97f7-ddd1de0043ff
  spec:
    host: prx0002-validareglaslre-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0002-validareglaslre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:42:27Z"
        status: "True"
        type: Admitted
      host: prx0002-validareglaslre-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: prx0003-datospersona
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: prx0003-datospersona
    namespace: api-fiscalizacion-prod
    resourceVersion: "22615443"
    uid: 24d39dae-ae81-4b37-9b4c-1c48a1070de7
  spec:
    host: prx0003-datospersona-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0003-datospersona
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:41:35Z"
        status: "True"
        type: Admitted
      host: prx0003-datospersona-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:01Z"
    labels:
      app: prx0003-datospersona-datagrid
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: prx0003-datospersona-datagrid
    namespace: api-fiscalizacion-prod
    resourceVersion: "22615257"
    uid: d1cf107d-ba6c-40ad-a1ca-ed7e47c32f94
  spec:
    host: prx0003-datospersona-datagrid-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0003-datospersona-datagrid
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:41:17Z"
        status: "True"
        type: Admitted
      host: prx0003-datospersona-datagrid-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: prx0004-enviarnotificaci
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: prx0004-enviarnotificaci
    namespace: api-fiscalizacion-prod
    resourceVersion: "22615055"
    uid: 1549b434-62e7-4cca-bcbf-fdd8c29b2f50
  spec:
    host: prx0004-enviarnotificaci-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0004-enviarnotificaci
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:41:00Z"
        status: "True"
        type: Admitted
      host: prx0004-enviarnotificaci-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0001-declaracionlibro
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0001-declaracionlibro
    namespace: api-fiscalizacion-prod
    resourceVersion: "22613089"
    uid: 33083cad-42ab-4c9d-b45f-963a898e2706
  spec:
    host: srv0001-declaracionlibro-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0001-declaracionlibro
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:37:28Z"
        status: "True"
        type: Admitted
      host: srv0001-declaracionlibro-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0002-obtenerdeclaraci
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0002-obtenerdeclaraci
    namespace: api-fiscalizacion-prod
    resourceVersion: "22615748"
    uid: 51a72d71-c523-4793-ba2a-57610ed4f6df
  spec:
    host: srv0002-obtenerdeclaraci-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0002-obtenerdeclaraci
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:42:09Z"
        status: "True"
        type: Admitted
      host: srv0002-obtenerdeclaraci-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0003-empleadores
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0003-empleadores
    namespace: api-fiscalizacion-prod
    resourceVersion: "22612806"
    uid: 1f1b00d9-706a-442d-8a08-6af43cd3a2de
  spec:
    host: srv0003-empleadores-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0003-empleadores
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:37:03Z"
        status: "True"
        type: Admitted
      host: srv0003-empleadores-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0004-declaraciontrans
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0004-declaraciontrans
    namespace: api-fiscalizacion-prod
    resourceVersion: "22612648"
    uid: 3741a0a2-cb5f-4d0e-b2be-2c4ff316c1a6
  spec:
    host: srv0004-declaraciontrans-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0004-declaraciontrans
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:36:44Z"
        status: "True"
        type: Admitted
      host: srv0004-declaraciontrans-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0005-descargalre
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0005-descargalre
    namespace: api-fiscalizacion-prod
    resourceVersion: "22612447"
    uid: ab14b760-eb06-4f8a-911a-d37347f9ba53
  spec:
    host: srv0005-descargalre-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0005-descargalre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:36:20Z"
        status: "True"
        type: Admitted
      host: srv0005-descargalre-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0006-apimetadata
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0006-apimetadata
    namespace: api-fiscalizacion-prod
    resourceVersion: "22612208"
    uid: 3900b1ab-a904-4657-8b2c-eaa8ab08f7b3
  spec:
    host: srv0006-apimetadata-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0006-apimetadata
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:35:56Z"
        status: "True"
        type: Admitted
      host: srv0006-apimetadata-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0007-bff
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0007-bff
    namespace: api-fiscalizacion-prod
    resourceVersion: "22611966"
    uid: 5efd95f1-9068-4ea6-a3d3-e1610c5250fe
  spec:
    host: srv0007-bff-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0007-bff
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:35:28Z"
        status: "True"
        type: Admitted
      host: srv0007-bff-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0008-validaciones
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0008-validaciones
    namespace: api-fiscalizacion-prod
    resourceVersion: "22611794"
    uid: 37c0bfd6-4e55-4a95-88f7-83eef9d17db6
  spec:
    host: srv0008-validaciones-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0008-validaciones
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:35:12Z"
        status: "True"
        type: Admitted
      host: srv0008-validaciones-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0009-admnominatrabaj
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0009-admnominatrabaj
    namespace: api-fiscalizacion-prod
    resourceVersion: "22611601"
    uid: 4c57cd1f-95e4-4f32-8574-f5a93e9a41fb
  spec:
    host: srv0009-admnominatrabaj-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0009-admnominatrabaj
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:34:50Z"
        status: "True"
        type: Admitted
      host: srv0009-admnominatrabaj-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0010-decljson
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0010-decljson
    namespace: api-fiscalizacion-prod
    resourceVersion: "22611398"
    uid: 6d52c2f7-c867-437e-89a4-b79529a2e373
  spec:
    host: srv0010-decljson-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0010-decljson
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:34:34Z"
        status: "True"
        type: Admitted
      host: srv0010-decljson-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T14:28:38Z"
    labels:
      app: srv0010-decljson
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0010-decljson-prod
    namespace: api-fiscalizacion-prod
    resourceVersion: "94690124"
    uid: 8d7310c7-aed6-454f-b4ec-1b04129e311b
  spec:
    host: srv0010-decljson-prod.apps.ocp4azu.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0010-decljson
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T14:28:38Z"
        status: "True"
        type: Admitted
      host: srv0010-decljson-prod.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0012-ctrleveventos
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0012-ctrleveventos
    namespace: api-fiscalizacion-prod
    resourceVersion: "22611241"
    uid: 0e70e754-85f5-418f-8173-7a9d34e427e7
  spec:
    host: srv0012-ctrleveventos-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0012-ctrleveventos
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:34:17Z"
        status: "True"
        type: Admitted
      host: srv0012-ctrleveventos-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 240s
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-24T19:12:02Z"
    labels:
      app: srv0013-certificados-lre
      migration.openshift.io/migrated-by-migmigration: fb6d415b-403f-4870-9be1-ea5c70a277b4
      migration.openshift.io/migrated-by-migplan: 939c18ea-060c-41cf-8cf0-870f4b31a246
      velero.io/backup-name: migration-2aa62-initial-wp7t9
      velero.io/restore-name: migration-2aa62-final-cd6m2
    name: srv0013-certificados-lre
    namespace: api-fiscalizacion-prod
    resourceVersion: "22611095"
    uid: e0d6111b-94cc-4888-a3cd-203a032a79a8
  spec:
    host: srv0013-certificados-lre-api-fiscalizacion-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0013-certificados-lre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:34:01Z"
        status: "True"
        type: Admitted
      host: srv0013-certificados-lre-api-fiscalizacion-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
